# social-justice-ai

./: .gitignore  README.md  main.py  pyproject.toml
app/model/: findingInsitie.ipynb
